--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -33,25 +33,30 @@ a,a:link,a:visited,a:focus,a:hover{
   color: inherit;
 }
 
-@media screen and (min-width: 300px){
+
+/* 超小屏幕（手机，小于 768px） */
+@media screen and (max-width: 767px) {
   html,body{
-    font-size: 45px;
+    font-size: 56px;
   }
 }
 
-@media screen and (min-width: 768px){
+/* 小屏幕（平板，大于等于 768px） */
+@media screen and (min-width: 768px) {
   html,body{
-    font-size: 60px;
+    font-size: 64px;
   }
 }
 
-@media screen and (min-width: 992px){
+/* 中等屏幕（桌面显示器，大于等于 992px） */
+@media screen and (min-width: 992px) {
   html,body{
-    font-size: 80px;
+    font-size: 82.7px;
   }
 }
 
-@media screen and (min-width: 1200px){
+/* 大屏幕（大桌面显示器，大于等于 1200px） */
+@media screen and (min-width: 1200px) {
   html,body{
     font-size: 100px;
   }
