--- a/src/assets/css/header.less
+++ b/src/assets/css/header.less
@@ -5,12 +5,15 @@ header{
   top: 0;
 
   .nav{
-    width: 1140px;
+    width: 1200px;
     height: 80px;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 
     nav{
       display: flex;
@@ -18,7 +21,7 @@ header{
       .logo{
         height: 80px;
         line-height: 80px;
-        font-size: 24px;
+        font-size: .24rem;
         font-weight: 600;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
@@ -29,7 +32,7 @@ header{
       }
 
       .nav-item{
-        font-size: 16px;
+        font-size: .16rem;
         height: 35px;
         line-height: 35px;
         padding: 5px 20px;
@@ -41,6 +44,9 @@ header{
       display: flex;
       align-content: center;
       justify-content: flex-end;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
       .input-wrap{
         font-size: 16px;
         display: flex;
@@ -86,43 +92,221 @@ header{
         line-height: 35px;
 
         .iconfont{
-          font-size: 16px;
+          font-size: .16rem;
         }
       }
     }
   }
 
-  @media screen and (max-width: 1139px){
+  /* 超小屏幕（手机，小于 768px） */
+  @media screen and (max-width: 767px) {
     .nav{
-      width: 960px;
-      height: 68px;
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+      width: 100%;
+      height: 50px;
 
       nav{
         display: flex;
         align-items: center;
         .logo{
-          height: 68px;
-          line-height: 68px;
+          height: 66px;
+          line-height: 66px;
           font-size: 20px;
-          font-weight: 600;
-          -webkit-box-sizing: border-box;
-          -moz-box-sizing: border-box;
-          box-sizing: border-box;
           padding: 0 6px;
-          margin-right: 14px;
-          color: #ffffff;
+          margin-right: 11px;
+        }
+
+        .nav-item{
+          display: none;
+          font-size: 14px;
+          height: 26px;
+          line-height: 26px;
+          padding: 4px 16px;
+        }
+      }
+
+      .search{
+        display: flex;
+        align-content: center;
+        justify-content: flex-end;
+        .input-wrap{
+          font-size: 14px;
+          height: 26px;
+          -webkit-border-radius: 26px;
+          -moz-border-radius: 26px;
+          border-radius: 26px;
+          input{
+            display: block;
+            width: 120px;
+            height: 26px;
+            padding-left: 16px;
+          }
+          .input-empty{
+            width: 20px;
+            height: 26px;
+            line-height: 26px;
+          }
+
+        }
+        .search-btn{
+          padding: 0 16px;
+          font-size: 14px;
+          height: 26px;
+          line-height: 26px;
+
+          .iconfont{
+            font-size: 14px;
+          }
+        }
+      }
+    }
+  }
+
+  /* 小屏幕（平板，大于等于 768px） */
+  @media screen and (min-width: 768px) {
+    .nav{
+      width: 768px;
+      height: 66px;
+
+      nav{
+        display: flex;
+        align-items: center;
+        .logo{
+          height: 66px;
+          line-height: 66px;
+          font-size: 20px;
+          padding: 0 6px;
+          margin-right: 11px;
         }
 
         .nav-item{
           font-size: 14px;
-          height: 28px;
-          line-height: 28px;
-          padding: 4px 18px;
-          color: #ffffff;
+          height: 26px;
+          line-height: 26px;
+          padding: 4px 16px;
+        }
+      }
+
+      .search{
+        display: flex;
+        align-content: center;
+        justify-content: flex-end;
+        .input-wrap{
+          font-size: 14px;
+          height: 26px;
+          -webkit-border-radius: 26px;
+          -moz-border-radius: 26px;
+          border-radius: 26px;
+          input{
+            display: block;
+            width: 120px;
+            height: 26px;
+            padding-left: 16px;
+          }
+          .input-empty{
+            width: 20px;
+            height: 26px;
+            line-height: 26px;
+          }
+
+        }
+        .search-btn{
+          padding: 0 16px;
+          font-size: 14px;
+          height: 26px;
+          line-height: 26px;
+
+          .iconfont{
+            font-size: 14px;
+          }
+        }
+      }
+    }
+  }
+
+  /* 中等屏幕（桌面显示器，大于等于 992px） */
+  @media screen and (min-width: 992px) {
+    .nav{
+      width: 992px;
+      height: 66px;
+
+      nav{
+        display: flex;
+        align-items: center;
+        .logo{
+          height: 66px;
+          line-height: 66px;
+          font-size: 20px;
+          padding: 0 6px;
+          margin-right: 11px;
+        }
+
+        .nav-item{
+          font-size: 14px;
+          height: 26px;
+          line-height: 26px;
+          padding: 4px 16px;
+        }
+      }
+
+      .search{
+        display: flex;
+        align-content: center;
+        justify-content: flex-end;
+        .input-wrap{
+          font-size: 14px;
+          height: 26px;
+          -webkit-border-radius: 26px;
+          -moz-border-radius: 26px;
+          border-radius: 26px;
+          input{
+            display: block;
+            width: 120px;
+            height: 26px;
+            padding-left: 16px;
+          }
+          .input-empty{
+            width: 20px;
+            height: 26px;
+            line-height: 26px;
+          }
+
+        }
+        .search-btn{
+          padding: 0 16px;
+          font-size: 14px;
+          height: 26px;
+          line-height: 26px;
+
+          .iconfont{
+            font-size: 14px;
+          }
+        }
+      }
+    }
+  }
+
+  /* 大屏幕（大桌面显示器，大于等于 1200px） */
+  @media screen and (min-width: 1200px) {
+    .nav{
+      width: 1200px;
+      height: 80px;
+
+      nav{
+        display: flex;
+        align-items: center;
+        .logo{
+          height: 80px;
+          line-height: 80px;
+          font-size: 24px;
+          padding: 0 8px;
+          margin-right: 16px;
+        }
+
+        .nav-item{
+          font-size: 16px;
+          height: 35px;
+          line-height: 35px;
+          padding: 5px 20px;
         }
       }
 
@@ -132,45 +316,27 @@ header{
         justify-content: flex-end;
         .input-wrap{
           font-size: 16px;
-          display: flex;
-          align-content: center;
-          justify-content: flex-start;
           height: 35px;
           -webkit-border-radius: 35px;
           -moz-border-radius: 35px;
-          border-radius: 35px;;
-          background-color: #ffffff;
-          overflow: hidden;
+          border-radius: 35px;
           input{
             display: block;
             width: 150px;
             height: 35px;
-            border: none;
-            outline: none;
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
             padding-left: 20px;
           }
           .input-empty{
             width: 25px;
             height: 35px;
-            text-align: center;
             line-height: 35px;
             color: #222222;
-            cursor: pointer;
           }
 
         }
         .search-btn{
-          -webkit-box-sizing: border-box;
-          -moz-box-sizing: border-box;
-          box-sizing: border-box;
           padding: 0 20px;
           font-size: 16px;
-          color: #ffffff;
-          display: flex;
-          text-align: center;
           height: 35px;
           line-height: 35px;
 
