--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -11,7 +11,7 @@
     box-sizing: border-box;
     background-color: #ffffff;
     main {
-      min-height: 1000px;
+      min-height: 10rem;
     }
   }
 }
