--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,172 +1,104 @@
 header {
+  height: 30rem;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: relative;
+  font-family: Handwriting;
+}
+header .pf-wrap {
+  position: absolute;
   width: 100%;
-  background-color: #222222;
-  position: fixed;
-  top: 0;
-}
-header .nav {
-  width: 1140px;
-  height: 80px;
-  margin: 0 auto;
+  height: 300px;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-header .nav nav {
-  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
-header .nav nav .logo {
-  height: 80px;
-  line-height: 80px;
-  font-size: 24px;
-  font-weight: 600;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 0 8px;
-  margin-right: 16px;
-  color: #ffffff;
-}
-header .nav nav .nav-item {
-  font-size: 16px;
-  height: 35px;
-  line-height: 35px;
-  padding: 5px 20px;
-  color: #ffffff;
-}
-header .nav .search {
-  display: flex;
-  align-content: center;
-  justify-content: flex-end;
-}
-header .nav .search .input-wrap {
-  font-size: 16px;
-  display: flex;
-  align-content: center;
-  justify-content: flex-start;
-  height: 35px;
-  -webkit-border-radius: 35px;
-  -moz-border-radius: 35px;
-  border-radius: 35px;
-  background-color: #ffffff;
+header .pf-wrap .pf-picture {
+  margin: 0 auto 0;
+  padding: .4rem;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
   overflow: hidden;
 }
-header .nav .search .input-wrap input {
+header .pf-wrap .pf-picture .pf-picture-wrap {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+  overflow: hidden;
+}
+header .pf-wrap .pf-picture .pf-picture-wrap img {
   display: block;
-  width: 150px;
-  height: 35px;
-  border: none;
-  outline: none;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding-left: 20px;
+  width: 100%;
+  height: 100%;
 }
-header .nav .search .input-wrap .input-empty {
-  width: 25px;
-  height: 35px;
+header .pf-wrap .pf-name {
+  margin-top: .6rem;
+  color: #fff;
   text-align: center;
-  line-height: 35px;
-  color: #222222;
-  cursor: pointer;
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+  vertical-align: text-bottom;
 }
-header .nav .search .search-btn {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 0 20px;
-  font-size: 16px;
-  color: #ffffff;
+header .pf-wrap .pf-name .name {
+  display: inline;
+  font-size: 2.2rem;
+}
+header .pf-wrap .pf-intro {
+  font-size: 1.6rem;
+  margin-top: .4rem;
+  text-align: center;
+  color: #fff;
+  line-height: 1.8rem;
+  text-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.5);
+}
+header .nav {
+  position: fixed;
+  width: 100%;
+  padding: 1rem;
   display: flex;
-  text-align: center;
-  height: 35px;
-  line-height: 35px;
+  align-items: center;
+  justify-content: flex-end;
 }
-header .nav .search .search-btn .iconfont {
-  font-size: 16px;
+header .nav .nav-list {
+  display: flex;
+  align-items: center;
 }
-@media screen and (max-width: 1139px) {
-  header .nav {
-    width: 960px;
-    height: 68px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+header .nav .nav-list .nav-list-item {
+  padding: 0 .6rem;
+  color: #ffffff;
+}
+header .nav .nav-list .nav-list-item:not(:last-child) {
+  margin-right: 1rem;
+}
+header .header-bg {
+  z-index: -1;
+  position: absolute;
+  height: 30rem;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background: url('../images/banner.jpg') no-repeat;
+  background-size: cover;
+}
+@media screen and (max-width: 768px) {
+  header {
+    height: 24rem;
   }
-  header .nav nav {
-    display: flex;
-    align-items: center;
+  header .pf-wrap {
+    height: 24rem;
   }
-  header .nav nav .logo {
-    height: 68px;
-    line-height: 68px;
-    font-size: 20px;
-    font-weight: 600;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 0 6px;
-    margin-right: 14px;
-    color: #ffffff;
+  header .pf-wrap .pf-picture .pf-picture-wrap {
+    width: 8rem;
+    height: 8rem;
   }
-  header .nav nav .nav-item {
-    font-size: 14px;
-    height: 28px;
-    line-height: 28px;
-    padding: 4px 18px;
-    color: #ffffff;
+  header .pf-wrap .pf-name .name {
+    font-size: 2rem;
   }
-  header .nav .search {
-    display: flex;
-    align-content: center;
-    justify-content: flex-end;
+  header .pf-wrap .pf-intro {
+    font-size: 1.4rem;
   }
-  header .nav .search .input-wrap {
-    font-size: 16px;
-    display: flex;
-    align-content: center;
-    justify-content: flex-start;
-    height: 35px;
-    -webkit-border-radius: 35px;
-    -moz-border-radius: 35px;
-    border-radius: 35px;
-    background-color: #ffffff;
-    overflow: hidden;
-  }
-  header .nav .search .input-wrap input {
-    display: block;
-    width: 150px;
-    height: 35px;
-    border: none;
-    outline: none;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding-left: 20px;
-  }
-  header .nav .search .input-wrap .input-empty {
-    width: 25px;
-    height: 35px;
-    text-align: center;
-    line-height: 35px;
-    color: #222222;
-    cursor: pointer;
-  }
-  header .nav .search .search-btn {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 0 20px;
-    font-size: 16px;
-    color: #ffffff;
-    display: flex;
-    text-align: center;
-    height: 35px;
-    line-height: 35px;
-  }
-  header .nav .search .search-btn .iconfont {
-    font-size: 16px;
+  header .header-bg {
+    height: 24rem;
   }
 }
